syntax = "proto3";
package msg;

enum MessageID {
	MsgError      = 0;
	MsgPing       = 1;
	MsgPong       = 2;
	MsgLoginTest  = 3;
	MsgLogin      = 4;
	MsgLoginR     = 5;
	MsgLogout     = 6;
	MsgLogoutR    = 7;
	MsgJoinRoom   = 8;
	MsgJoinRoomR  = 9;
	MsgLeaveRoom  = 10;
	MsgLeaveRoomR = 11;
	MsgGrabBanker = 12;
	MsgAutoBet    = 13;
	MsgAutoBetR   = 14;
	MsgBet        = 15;
	MsgBetR       = 16;
	MsgBetInfoB   = 17;
	MsgBankersB   = 18;
	MsgPlayersB   = 19;
}

message Ping{}
message Pong{}

message UserInfo {
    uint32 UserID = 1;
    double Money = 2;
    string Avatar = 3;
    string NickName = 4;
    double BetAmount = 5; // 下注数
    uint32 WinCount = 6; // 近20局获胜局数
}

message RoomInfo {
    uint32 RoomID = 1;
    uint32 MinBet = 2;    // 限红 下限
    uint32 MaxBet = 3;    // 限红 上限
    uint32 MinLimit = 4;  // 能玩的最低金币
    uint32 Status = 5;
    uint32 EndTime = 6;
    repeated uint32 History = 7;
    repeated uint32 HisStatistic = 8;
}

message RoomChangeHB {
    uint32 RoomID = 1;
    uint32 Status = 2;      // 改变之后的状态
    uint32 EndTime = 3;     // 倒计时结束时间
    uint32 Result = 4;      // 开奖结果
    uint32 ServerTime = 5;  // 服务器时间
}

message BetInfoB {
    double AmountBenzGolden = 1;
    double AmountBenz = 2;
    double AmountBMWGolden = 3;
    double AmountBMW = 4;
    double AmountAudiGolden = 5;
    double AmountAudi = 6;
    double AmountVWGolden = 7;
    double AmountVW = 8;
    uint32 ServerTime = 9;  // 服务器时间
}

message BankersB {
    repeated UserInfo Dealer = 1; // 庄家列表，0为当前庄家，其余为上庄列表
    uint32 ServerTime = 2;        // 服务器时间
}

message PlayersB {
    repeated UserInfo Players = 1; // 玩家列表/历史
    uint32 ServerTime = 2;         // 服务器时间
}

message Login {
    uint32 UserID = 1;
    string Password = 2;
}

message LoginTest {
    uint32 UserID = 1;
}

message LoginR {
    UserInfo User = 1;
    uint32 RoomID = 2;
    repeated RoomInfo Rooms = 3;
    uint32 ServerTime = 4;  // 服务器时间
}

message Logout {}

message LogoutR {}

message JoinRoom {
    uint32 RoomID = 1;
}

message JoinRoomR {
    UserInfo CurDealers = 1;       // 当前房间庄家信息
    BetInfoB CurBetInfo = 2;       // 当前房间下注信息
    repeated UserInfo Players = 3; // 当前房间的玩家信息
    uint32 ServerTime = 4;         // 服务器时间
}

message LeaveRoom {}

message LeaveRoomR {}

message GrabBanker {}

message Bet {
    uint32 Area = 1;
    double Amount = 2;
}

message BetR {}

message AutoBet {}

message AutoBetR {}

enum ErrorCode {
    Success = 0;

    InsufficientBalanceGrabDealer = 101; // 上庄钱不够
    InsufficientBalanceBet = 102;        // 下注钱不够

    ServerClosed = 201;
    UserRepeatLogin = 202;
    UserRemoteLogin = 203;
}

message Error {
    ErrorCode Code = 1;
}
